support for ie8 fixed media query

--- a/demo/css/layout.css
+++ b/demo/css/layout.css
@@ -1,421 +1,336 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-}
-
-html {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-q, blockquote {
-  quotes: none;
-}
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-a img {
-  border: none;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-  display: block;
-}
-
+/*!
+ * @file _old-ie.scss
+ * @author Jake Archibald
+ * @url https://github.com/jakearchibald/sass-ie
+ * MIT License
+ */
+/*!
+ * @file _media-queries.scss
+ * @author Guy Hughes
+ *
+ * Upstream Author: Rafal Bromirski
+ * www: http://paranoida.com/
+ * twitter: http://twitter.com/paranoida
+ * dribbble: http://dribbble.com/paranoida
+ * Licensed under a MIT License
+ */
+/* line 10, ../sass/layout.scss */
 * {
   -webkit-text-size-adjust: none;
-  -ms-text-size-adjust: none;
-}
+  -ms-text-size-adjust: none; }
 
+/* line 13, ../sass/layout.scss */
 body {
   font: 12px Helvetica, Arial, sans-serif;
   background: white;
-  color: #444444;
-}
+  color: #444444; }
 
+/* line 20, ../sass/layout.scss */
 .content {
   padding: 20px;
   font-size: 18px;
   font-weight: bold;
-  text-shadow: 0 1px 0 #fff;
-}
-@media screen and (max-width: 480px) {
-  .content {
-    font-size: 14px;
-  }
-}
+  text-shadow: 0 1px 0 #fff; }
+  @media screen and (max-width: 480px) {
+    /* line 20, ../sass/layout.scss */
+    .content {
+      font-size: 14px; } }
 
+/* line 33, ../sass/layout.scss */
 .true, .false {
-  display: inline-block;
-}
+  display: inline-block; }
 
+/* line 38, ../sass/layout.scss */
 .true {
-  color: #00c30e;
-}
+  color: #00c30e; }
 
+/* line 43, ../sass/layout.scss */
 .false {
-  color: #d10013;
-}
+  color: #d10013; }
 
+/* line 48, ../sass/layout.scss */
 hr {
   border: 0;
   background: #ddd;
   height: 1px;
-  margin: 10px 0;
-}
+  margin: 10px 0; }
 
+/* line 56, ../sass/layout.scss */
 h1 {
   color: #000;
-  font-size: 24px;
-}
+  font-size: 24px; }
 
+/* line 64, ../sass/layout.scss */
 p[class*="attr"] {
-  padding: 3px 0;
-}
-p[class*="attr"] .true {
-  display: none;
-}
+  padding: 3px 0; }
+  /* line 68, ../sass/layout.scss */
+  p[class*="attr"] .true {
+    display: none; }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
+  /* line 77, ../sass/layout.scss */
   p.attr-hdpi .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 78, ../sass/layout.scss */
   p.attr-hdpi .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  /* line 86, ../sass/layout.scss */
   p.attr-ipad .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 87, ../sass/layout.scss */
   p.attr-ipad .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-device-pixel-ratio: 2) {
+  /* line 95, ../sass/layout.scss */
   p.attr-ipad-retina .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 96, ../sass/layout.scss */
   p.attr-ipad-retina .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 1) {
+  /* line 106, ../sass/layout.scss */
   p.attr-iphone3 .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 107, ../sass/layout.scss */
   p.attr-iphone3 .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 1) and (orientation: landscape) {
+  /* line 115, ../sass/layout.scss */
   p.attr-iphone3-landscape .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 116, ../sass/layout.scss */
   p.attr-iphone3-landscape .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 1) and (orientation: portrait) {
+  /* line 124, ../sass/layout.scss */
   p.attr-iphone3-portrait .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 125, ../sass/layout.scss */
   p.attr-iphone3-portrait .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2 / 3) {
+  /* line 135, ../sass/layout.scss */
   p.attr-iphone4 .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 136, ../sass/layout.scss */
   p.attr-iphone4 .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2 / 3) and (orientation: landscape) {
+  /* line 144, ../sass/layout.scss */
   p.attr-iphone4-landscape .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 145, ../sass/layout.scss */
   p.attr-iphone4-landscape .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2 / 3) and (orientation: portrait) {
+  /* line 153, ../sass/layout.scss */
   p.attr-iphone4-portrait .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 154, ../sass/layout.scss */
   p.attr-iphone4-portrait .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40 / 71) {
+  /* line 164, ../sass/layout.scss */
   p.attr-iphone5 .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 165, ../sass/layout.scss */
   p.attr-iphone5 .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40 / 71) and (orientation: landscape) {
+  /* line 173, ../sass/layout.scss */
   p.attr-iphone5-landscape .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 174, ../sass/layout.scss */
   p.attr-iphone5-landscape .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40 / 71) and (orientation: portrait) {
+  /* line 182, ../sass/layout.scss */
   p.attr-iphone5-portrait .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 183, ../sass/layout.scss */
   p.attr-iphone5-portrait .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  /* line 193, ../sass/layout.scss */
   p.attr-ipad-landscape .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 194, ../sass/layout.scss */
   p.attr-ipad-landscape .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  /* line 202, ../sass/layout.scss */
   p.attr-ipad-portrait .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 203, ../sass/layout.scss */
   p.attr-ipad-portrait .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape) {
+  /* line 211, ../sass/layout.scss */
   p.attr-ipad-retina-landscape .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 212, ../sass/layout.scss */
   p.attr-ipad-retina-landscape .false {
-    display: none;
-  }
-}
+    display: none; } }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait) {
+  /* line 220, ../sass/layout.scss */
   p.attr-ipad-retina-portrait .true {
-    display: inline-block;
-  }
+    display: inline-block; }
+  /* line 221, ../sass/layout.scss */
   p.attr-ipad-retina-portrait .false {
-    display: none;
-  }
-}
+    display: none; } }
 
+/* line 230, ../sass/layout.scss */
 p.attr-max-width span[class*="max-width"] {
   display: inline-block;
   padding-right: 5px;
-  color: #bbb;
-}
+  color: #bbb; }
 
 @media screen and (max-width: 320px) {
+  /* line 242, ../sass/layout.scss */
   p.attr-max-width span.max-width-320 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-width: 480px) {
+  /* line 242, ../sass/layout.scss */
   p.attr-max-width span.max-width-480 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-width: 768px) {
+  /* line 242, ../sass/layout.scss */
   p.attr-max-width span.max-width-768 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-width: 1024px) {
+  /* line 242, ../sass/layout.scss */
   p.attr-max-width span.max-width-1024 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-width: 1200px) {
+  /* line 242, ../sass/layout.scss */
   p.attr-max-width span.max-width-1200 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-width: 1400px) {
+  /* line 242, ../sass/layout.scss */
   p.attr-max-width span.max-width-1400 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-width: 1600px) {
+  /* line 242, ../sass/layout.scss */
   p.attr-max-width span.max-width-1600 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 
+/* line 254, ../sass/layout.scss */
 p.attr-min-width span[class*="min-width"] {
   display: inline-block;
   padding-right: 5px;
-  color: #bbb;
-}
+  color: #bbb; }
 
 @media screen and (min-width: 320px) {
+  /* line 266, ../sass/layout.scss */
   p.attr-min-width span.min-width-320 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-width: 480px) {
+  /* line 266, ../sass/layout.scss */
   p.attr-min-width span.min-width-480 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-width: 768px) {
+  /* line 266, ../sass/layout.scss */
   p.attr-min-width span.min-width-768 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-width: 1024px) {
+  /* line 266, ../sass/layout.scss */
   p.attr-min-width span.min-width-1024 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-width: 1200px) {
+  /* line 266, ../sass/layout.scss */
   p.attr-min-width span.min-width-1200 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-width: 1400px) {
+  /* line 266, ../sass/layout.scss */
   p.attr-min-width span.min-width-1400 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-width: 1600px) {
+  /* line 266, ../sass/layout.scss */
   p.attr-min-width span.min-width-1600 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 
+/* line 277, ../sass/layout.scss */
 p.attr-min-screen-height span[class*="min-screen-heigh"] {
   display: inline-block;
   padding-right: 5px;
-  color: #bbb;
-}
+  color: #bbb; }
 
 @media screen and (min-height: 320px) {
+  /* line 289, ../sass/layout.scss */
   p.attr-min-screen-height span.min-screen-height-320 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-height: 480px) {
+  /* line 289, ../sass/layout.scss */
   p.attr-min-screen-height span.min-screen-height-480 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-height: 768px) {
+  /* line 289, ../sass/layout.scss */
   p.attr-min-screen-height span.min-screen-height-768 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-height: 1024px) {
+  /* line 289, ../sass/layout.scss */
   p.attr-min-screen-height span.min-screen-height-1024 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-height: 1200px) {
+  /* line 289, ../sass/layout.scss */
   p.attr-min-screen-height span.min-screen-height-1200 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-height: 1400px) {
+  /* line 289, ../sass/layout.scss */
   p.attr-min-screen-height span.min-screen-height-1400 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (min-height: 1600px) {
+  /* line 289, ../sass/layout.scss */
   p.attr-min-screen-height span.min-screen-height-1600 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 
+/* line 300, ../sass/layout.scss */
 p.attr-max-screen-height span[class*="max-screen-heigh"] {
   display: inline-block;
   padding-right: 5px;
-  color: #bbb;
-}
+  color: #bbb; }
 
 @media screen and (max-height: 320px) {
+  /* line 312, ../sass/layout.scss */
   p.attr-max-screen-height span.max-screen-height-320 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-height: 480px) {
+  /* line 312, ../sass/layout.scss */
   p.attr-max-screen-height span.max-screen-height-480 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-height: 768px) {
+  /* line 312, ../sass/layout.scss */
   p.attr-max-screen-height span.max-screen-height-768 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-height: 1024px) {
+  /* line 312, ../sass/layout.scss */
   p.attr-max-screen-height span.max-screen-height-1024 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-height: 1200px) {
+  /* line 312, ../sass/layout.scss */
   p.attr-max-screen-height span.max-screen-height-1200 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-height: 1400px) {
+  /* line 312, ../sass/layout.scss */
   p.attr-max-screen-height span.max-screen-height-1400 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
 @media screen and (max-height: 1600px) {
+  /* line 312, ../sass/layout.scss */
   p.attr-max-screen-height span.max-screen-height-1600 {
-    color: #00c30e;
-  }
-}
+    color: #00c30e; } }
