--- a/_media-queries.scss
+++ b/_media-queries.scss
@@ -1,19 +1,23 @@
-// ---------------------------------------------------------------------------------------------------------------------
-//
-//  Author: Rafal Bromirski
-//  www: http://paranoida.com/
-//  twitter: http://twitter.com/paranoida
-//  dribbble: http://dribbble.com/paranoida
-//
-//  Licensed under a MIT License
-//
-// ---------------------------------------------------------------------------------------------------------------------
+@import "old-ie";
+@import "fixed-media-query";
+
+
+/*!
+ * @file _media-queries.scss
+ * @author Guy Hughes
+ *
+ * Upstream Author: Rafal Bromirski
+ * www: http://paranoida.com/
+ * twitter: http://twitter.com/paranoida
+ * dribbble: http://dribbble.com/paranoida
+ * Licensed under a MIT License
+ */
 //
 // Requirements:
 //   Sass 3.2.0+
 //
-//  Version:
-//   1.3                                      // developed on 14/11/2013
+//  Based on upstream version: 1.3
+//  https://github.com/paranoida/sass-mediaqueries/tree/6c1607b03960525adea19e96aa322b4d9c6a5056
 //
 // Mixins:
 //   @ min-screen(width)                      // shortcut for @media screen and (min-width ...)
@@ -54,49 +58,109 @@
 
 @mixin screen($resMin, $resMax)
 {
-  @media screen and (min-width: $resMin) and (max-width: $resMax)
+  @if $fixed-media-query == true
   {
-    @content;
+    @if $fmq-width >= $resMin and $fmq-width <= $resMax
+    {
+      @content
+    }
+  }
+  @else
+  {
+    @media screen and (min-width: $resMin) and (max-width: $resMax)
+    {
+      @content;
+    }
   }
 }
 
-@mixin max-screen($res)
+@mixin max-screen($resMax)
 {
-  @media screen and (max-width: $res)
+  @if $fixed-media-query == true
   {
-    @content;
+    @if $fmq-width <= $resMax
+    {
+      @content
+    }
+  }
+  @else
+  {
+    @media screen and (max-width: $resMax)
+    {
+      @content;
+    }
   }
 }
 
-@mixin min-screen($res)
+@mixin min-screen($resMin)
 {
-  @media screen and (min-width: $res)
+  @if $fixed-media-query ==true
   {
-    @content;
+    @if $fmq-width >= $resMin
+    {
+      @content
+    }
+  }
+  @else
+  {
+    @media screen and (min-width: $resMin)
+    {
+      @content;
+    }
   }
 }
 
-@mixin screen-height($resMin, $resMax)
+@mixin screen-height($heightMin, $heightMax)
 {
-  @media screen and (min-height: $resMin) and (max-height: $resMax)
+  @if $fixed-media-query == true
   {
-    @content;
+    @if $fmq-height >= $heightMin and $fmq-height <= $heightMax
+    {
+      @content
+    }
+  }
+  @else
+  {
+    @media screen and (min-height: $heightMin) and (max-height: $heightMax)
+    {
+      @content;
+    }
   }
 }
 
-@mixin max-screen-height($res)
+@mixin max-screen-height($resMax)
 {
-  @media screen and (max-height: $res)
+  @if $fixed-media-query == true
   {
-    @content;
+    @if $fmq-height <= $resMax
+    {
+      @content
+    }
+  }
+  @else
+  {
+    @media screen and (max-height: $resMax)
+    {
+      @content;
+    }
   }
 }
 
-@mixin min-screen-height($res)
+@mixin min-screen-height($resMin)
 {
-  @media screen and (min-height: $res)
+  @if $fixed-media-query == true
   {
-    @content;
+    @if $fmq-height >= $resMin
+    {
+      @content
+    }
+  }
+  @else
+  {
+    @media screen and (min-height: $resMin)
+    {
+      @content;
+    }
   }
 }
 
@@ -109,16 +173,18 @@
 
 @mixin hdpi($ratio: 1.3)
 {
-  @media only screen and (-webkit-min-device-pixel-ratio: $ratio),
-  only screen and (min--moz-device-pixel-ratio: $ratio),
-  only screen and (-o-min-device-pixel-ratio: #{$ratio}/1),
-  only screen and (min-resolution: #{round($ratio*96)}dpi),
-  only screen and (min-resolution: #{$ratio}dppx)
+  @if $fixed-media-query != true and $old-ie != true
   {
-    @content;
+    @media only screen and (-webkit-min-device-pixel-ratio: $ratio),
+    only screen and (min--moz-device-pixel-ratio: $ratio),
+    only screen and (-o-min-device-pixel-ratio: #{$ratio}/1),
+    only screen and (min-resolution: #{round($ratio*96)}dpi),
+    only screen and (min-resolution: #{$ratio}dppx)
+    {
+      @content;
+    }
   }
 }
-
 // ---------------------------------------------------------------------------------------------------------------------
 // --- iphone ----------------------------------------------------------------------------------------------------------
 // ---------------------------------------------------------------------------------------------------------------------
@@ -129,20 +195,33 @@
   $deviceMaxWidth: 480px;
   $devicePixelRatio: 1;
 
-  @if $orientation == all
+  @if $fixed-media-query == true
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
-    and (-webkit-device-pixel-ratio: $devicePixelRatio)
+    @if $fmq-width >= $deviceMinWidth and $fmq-width <= $deviceMaxWidth
     {
-      @content;
+      @if $orientation == all and $old-ie != true
+      {
+        @content
+      }
     }
   }
   @else
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
-    and (-webkit-device-pixel-ratio: $devicePixelRatio) and (orientation:#{$orientation})
+    @if $orientation == all
     {
-      @content;
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      and (-webkit-device-pixel-ratio: $devicePixelRatio)
+      {
+        @content;
+      }
+    }
+    @else
+    {
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      and (-webkit-device-pixel-ratio: $devicePixelRatio) and (orientation:#{$orientation})
+      {
+        @content;
+      }
     }
   }
 }
@@ -158,20 +237,33 @@
   $devicePixelRatio: 2;
   $deviceAspectRatio: '2/3';
 
-  @if $orientation == all
+  @if $fixed-media-query == true
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
-    and (-webkit-device-pixel-ratio: $devicePixelRatio) and (device-aspect-ratio: $deviceAspectRatio)
+    @if $fmq-width >= $deviceMinWidth and $fmq-width <= $deviceMaxWidth
     {
-      @content;
+      @if $orientation == all and $old-ie != true
+      {
+        @content
+      }
     }
   }
   @else
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
-    and (-webkit-device-pixel-ratio: $devicePixelRatio) and (device-aspect-ratio: 2/3) and (orientation:#{$orientation})
+    @if $orientation == all
     {
-      @content;
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      and (-webkit-device-pixel-ratio: $devicePixelRatio) and (device-aspect-ratio: $deviceAspectRatio)
+      {
+        @content;
+      }
+    }
+    @else
+    {
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      and (-webkit-device-pixel-ratio: $devicePixelRatio) and (device-aspect-ratio: 2/3) and (orientation:#{$orientation})
+      {
+        @content;
+      }
     }
   }
 }
@@ -187,20 +279,33 @@
   $devicePixelRatio: 2;
   $deviceAspectRatio: '40/71';
 
-  @if $orientation == all
+  @if $fixed-media-query == true
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
-    and (-webkit-device-pixel-ratio: $devicePixelRatio) and (device-aspect-ratio: $deviceAspectRatio)
+    @if $fmq-width >= $deviceMinWidth and $fmq-width <= $deviceMaxWidth
     {
-      @content;
+      @if $orientation == all and $old-ie != true
+      {
+        @content
+      }
     }
   }
   @else
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
-    and (-webkit-device-pixel-ratio: $devicePixelRatio) and (device-aspect-ratio: $deviceAspectRatio) and (orientation:#{$orientation})
+    @if $orientation == all
     {
-      @content;
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      and (-webkit-device-pixel-ratio: $devicePixelRatio) and (device-aspect-ratio: $deviceAspectRatio)
+      {
+        @content;
+      }
+    }
+    @else
+    {
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      and (-webkit-device-pixel-ratio: $devicePixelRatio) and (device-aspect-ratio: $deviceAspectRatio) and (orientation:#{$orientation})
+      {
+        @content;
+      }
     }
   }
 }
@@ -214,19 +319,32 @@
   $deviceMinWidth: 768px;
   $deviceMaxWidth: 1024px;
 
-  @if $orientation == all
+  @if $fixed-media-query == true
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+    @if $fmq-width >= $deviceMinWidth and $fmq-width <= $deviceMaxWidth
     {
-      @content;
+      @if $orientation == all and $old-ie != true
+      {
+        @content
+      }
     }
   }
   @else
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
-    and (orientation:#{$orientation})
+    @if $orientation == all
     {
-      @content;
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      {
+        @content;
+      }
+    }
+    @else
+    {
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      and (orientation:#{$orientation})
+      {
+        @content;
+      }
     }
   }
 }
@@ -240,21 +358,33 @@
   $deviceMinWidth: 768px;
   $deviceMaxWidth: 1024px;
   $devicePixelRatio: 2;
-
-  @if $orientation == all
+  @if $fixed-media-query == true
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
-    and (-webkit-device-pixel-ratio: $devicePixelRatio)
+    @if $fmq-width >= $deviceMinWidth and $fmq-width <= $deviceMaxWidth
     {
-      @content;
+      @if $orientation == all and $old-ie != true
+      {
+        @content
+      }
     }
   }
   @else
   {
-    @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
-    and (-webkit-device-pixel-ratio: $devicePixelRatio) and (orientation:#{$orientation})
+    @if $orientation == all
     {
-      @content;
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      and (-webkit-device-pixel-ratio: $devicePixelRatio)
+      {
+        @content;
+      }
+    }
+    @else
+    {
+      @media only screen and (min-device-width: $deviceMinWidth) and (max-device-width: $deviceMaxWidth)
+      and (-webkit-device-pixel-ratio: $devicePixelRatio) and (orientation:#{$orientation})
+      {
+        @content;
+      }
     }
   }
 }
